Fixed overflow

--- a/style.css
+++ b/style.css
@@ -319,7 +319,8 @@ button.btn {
     margin: 0;
     flex: 1;
     height: 100%;
-    padding: 16px
+    padding: 16px;
+    overflow: hidden;
 }
 
 .contact-wrapper ul li{
